@@ -5,7 +5,7 @@
 
 	<groupId>io.mosip.authentication</groupId>
 	<artifactId>authentication-parent</artifactId>
-	<version>1.2.1-SNAPSHOT</version>
+	<version>1.2.1-java21-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>id-authentication</name>
@@ -93,54 +93,45 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
 		<!-- Kernel components -->
-		<kernel.parent.version>1.2.1-SNAPSHOT</kernel.parent.version>
-		<kernel-core.version>${kernel.parent.version}</kernel-core.version>
-		<kernel-keymanager-service.version>1.2.1-SNAPSHOT</kernel-keymanager-service.version>
-		<kernel-idgenerator-tokenid.version>${kernel.parent.version}</kernel-idgenerator-tokenid.version>
-		<kernel-idobjectvalidator.version>${kernel.parent.version}</kernel-idobjectvalidator.version>
-		<kernel-pinvalidator.version>${kernel.parent.version}</kernel-pinvalidator.version>
-		<kernel-templatemanager-velocity.version>${kernel.parent.version}</kernel-templatemanager-velocity.version>
-		<kernel-logger-logback.version>${kernel.parent.version}</kernel-logger-logback.version>
-		<kernel-dataaccess-hibernate.version>${kernel.parent.version}</kernel-dataaccess-hibernate.version>
-		<kernel-cbeffutil-api.version>${kernel.parent.version}</kernel-cbeffutil-api.version>
-		<kernel-templatemanager-velocity.version>${kernel.parent.version}</kernel-templatemanager-velocity.version>
-		<kernel-auth-adapter.version>${kernel.parent.version}</kernel-auth-adapter.version>
-		<kernel-biometrics-api.version>${kernel.parent.version}</kernel-biometrics-api.version>
-		<kernel-biosdk-provider.version>${kernel.parent.version}</kernel-biosdk-provider.version>
-		<kernel-websubclient-api.version>${kernel.parent.version}</kernel-websubclient-api.version>
+		<kernel.parent.version>1.2.1-java21-SNAPSHOT</kernel.parent.version>
+		<kernel-core.version>1.2.1-java21-SNAPSHOT</kernel-core.version>
+		<kernel-keymanager-service.version>1.2.1-java21-SNAPSHOT</kernel-keymanager-service.version>
+		<kernel-idgenerator-tokenid.version>1.2.1-java21-SNAPSHOT</kernel-idgenerator-tokenid.version>
+		<kernel-idobjectvalidator.version>1.2.1-java21-SNAPSHOT</kernel-idobjectvalidator.version>
+		<kernel-pinvalidator.version>1.2.1-java21-SNAPSHOT</kernel-pinvalidator.version>
+		<kernel-templatemanager-velocity.version>1.2.1-java21-SNAPSHOT</kernel-templatemanager-velocity.version>
+		<kernel-logger-logback.version>1.2.1-java21-SNAPSHOT</kernel-logger-logback.version>
+		<kernel-dataaccess-hibernate.version>1.2.1-java21-SNAPSHOT</kernel-dataaccess-hibernate.version>
+		<kernel-cbeffutil-api.version>1.2.1-java21-SNAPSHOT</kernel-cbeffutil-api.version>
+		<kernel-templatemanager-velocity.version>1.2.1-java21-SNAPSHOT</kernel-templatemanager-velocity.version>
+		<kernel-auth-adapter.version>1.2.1-java21-SNAPSHOT</kernel-auth-adapter.version>
+		<kernel-biometrics-api.version>1.2.1-java21-SNAPSHOT</kernel-biometrics-api.version>
+		<kernel-biosdk-provider.version>1.2.1-java21-SNAPSHOT</kernel-biosdk-provider.version>
+		<kernel-websubclient-api.version>1.2.1-java21-SNAPSHOT</kernel-websubclient-api.version>
 		<id-repository-core.version>1.2.0.1-B1</id-repository-core.version>
 		<json.utility.version>20180130</json.utility.version>
-		<kernel-demoapi.version>1.2.0.1-SNAPSHOT</kernel-demoapi.version>
-		<kernel-idauthenticationfilter-api.version>${kernel.parent.version}</kernel-idauthenticationfilter-api.version>
-		<kernel-biometrics-util>${kernel.parent.version}</kernel-biometrics-util>
-		<kernel-openid-bridge-api.version>${kernel.parent.version}</kernel-openid-bridge-api.version>
+		<kernel-demoapi.version>1.2.1-java21-SNAPSHOT</kernel-demoapi.version>
+		<kernel-idauthenticationfilter-api.version>1.2.1-java21-SNAPSHOT</kernel-idauthenticationfilter-api.version>
+		<kernel-biometrics-util>1.2.1-java21-SNAPSHOT</kernel-biometrics-util>
+		<kernel-openid-bridge-api.version>1.2.1-java21-SNAPSHOT</kernel-openid-bridge-api.version>
 
 		<!-- Maven Plugins -->
-		<maven.compiler.source>11</maven.compiler.source>
-		<maven.compiler.target>11</maven.compiler.target>
+		<maven.compiler.source>21</maven.compiler.source>
+		<maven.compiler.target>21</maven.compiler.target>
 		<maven.compiler.version>3.8.0</maven.compiler.version>
 		<maven.javadoc.version>3.2.0</maven.javadoc.version>
-		<maven.swagger.version>2.9.2</maven.swagger.version>
 		<maven.jacoco.version>0.8.5</maven.jacoco.version>
 		<maven.sonar.version>3.7.0.1746</maven.sonar.version>
-		<powermock.version>2.0.0</powermock.version>
+		<powermock.version>2.0.9</powermock.version>
 		<maven.surefire.plugin.version>2.22.0</maven.surefire.plugin.version>
 
 		<!-- Test & Logging -->
-		<junit.version>4.13.1</junit.version>
-		<mockito.version>2.23.4</mockito.version>
+		<junit.version>4.13.2</junit.version>
+		<mockito.version>3.4.3</mockito.version>
 		<byte-buddy.version>1.9.3</byte-buddy.version>
 
-		<!-- Lombok -->
-		<lombok.version>1.18.22</lombok.version>
-
 		<!-- Spring Boot -->
-		<spring.boot.version>2.0.2.RELEASE</spring.boot.version>
-		<spring.batch.version>4.0.1.RELEASE</spring.batch.version>
 		<spring.security.test.version>5.0.5.RELEASE</spring.security.test.version>
-		<spring-cloud-config.version>2.0.0.RELEASE</spring-cloud-config.version>
-
-		<javax.validation-api.version>2.0.1.Final</javax.validation-api.version>
 		<hibernate.validator.version>6.0.12.Final</hibernate.validator.version>
 		<jackson.version>2.12.1</jackson.version>
 		<postgresql.version>42.2.2</postgresql.version>
@@ -161,51 +152,62 @@
 
 		<objenesis.version>3.1</objenesis.version>
 
-		<springdoc.version>1.5.10</springdoc.version>
+		<springdoc.version>2.5.0</springdoc.version>
 		
 	</properties>
-
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>io.mosip.kernel</groupId>
+				<artifactId>kernel-bom</artifactId>
+				<version>1.2.1-java21-SNAPSHOT</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 	<dependencies>
 		<!-- JUnit -->
 		<dependency>
+			<groupId>org.junit.vintage</groupId>
+			<artifactId>junit-vintage-engine</artifactId>
+		</dependency>
+		<!--<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>${junit.version}</version>
 			<scope>test</scope>
-		</dependency>
+			<version>${junit.version}</version>
+		</dependency>-->
 		<!-- Lombok -->
+
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>${lombok.version}</version>
 			<scope>compile</scope>
 		</dependency>
 		<!-- Swagger -->
-		<dependency>
+		<!--<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger2</artifactId>
 			<version>${maven.swagger.version}</version>
-		</dependency>
-		<dependency>
+		</dependency>-->
+		<!--<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>${maven.swagger.version}</version>
-		</dependency>
+		</dependency>-->
 		<!-- TODO - Check if below dependency can be added only in service -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-webflux</artifactId>
-			<version>${spring.boot.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.xml.bind</groupId>
 			<artifactId>jaxb-api</artifactId>
-			<version>2.3.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.javassist</groupId>
 			<artifactId>javassist</artifactId>
-			<version>3.27.0-GA</version>
 		</dependency>
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
@@ -253,17 +255,15 @@
 		<dependency>
 			<groupId>com.googlecode.json-simple</groupId>
 			<artifactId>json-simple</artifactId>
-			<version>1.1.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springdoc</groupId>
-			<artifactId>springdoc-openapi-ui</artifactId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>${springdoc.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-configuration-processor</artifactId>
-			<version>${spring.boot.version}</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
@@ -440,7 +440,12 @@
 					<skipTests>${skipTests}</skipTests>
 					<skip>false</skip>
 					<argLine>
-						${argLine} --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED --illegal-access=permit
+						${argLine}
+						--add-opens java.xml/jdk.xml.internal=ALL-UNNAMED
+						--add-opens java.base/java.lang=ALL-UNNAMED
+						--add-modules=ALL-SYSTEM
+						--illegal-access=debug
+						--enable-preview
 					</argLine>
 				</configuration>
 			</plugin>
